[gd_scene load_steps=43 format=3 uid="uid://cp8ko7h2x5oea"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_arfj7"]
[ext_resource type="PackedScene" uid="uid://cei32lmo4pf5v" path="res://scenes/weapon.tscn" id="4_quwbl"]
[ext_resource type="AudioStream" uid="uid://bf3syy8r8dacm" path="res://assets/sounds/dash-sound.wav" id="8_gni2w"]
[ext_resource type="Texture2D" uid="uid://8tsb76mqdkmv" path="res://assets/hero/AnimationSheet_Character.png" id="9_p7fwm"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wxebj"]
atlas = ExtResource("9_p7fwm")
region = Rect2(0, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s1ce6"]
atlas = ExtResource("9_p7fwm")
region = Rect2(32, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cmrbd"]
atlas = ExtResource("9_p7fwm")
region = Rect2(64, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hdetp"]
atlas = ExtResource("9_p7fwm")
region = Rect2(96, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2scci"]
atlas = ExtResource("9_p7fwm")
region = Rect2(128, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6nl5w"]
atlas = ExtResource("9_p7fwm")
region = Rect2(160, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xypf6"]
atlas = ExtResource("9_p7fwm")
region = Rect2(192, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o1cno"]
atlas = ExtResource("9_p7fwm")
region = Rect2(224, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jdch"]
atlas = ExtResource("9_p7fwm")
region = Rect2(0, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_auvdt"]
atlas = ExtResource("9_p7fwm")
region = Rect2(32, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lcg61"]
atlas = ExtResource("9_p7fwm")
region = Rect2(64, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ot5vk"]
atlas = ExtResource("9_p7fwm")
region = Rect2(96, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0afaq"]
atlas = ExtResource("9_p7fwm")
region = Rect2(128, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1raqs"]
atlas = ExtResource("9_p7fwm")
region = Rect2(160, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_54nnb"]
atlas = ExtResource("9_p7fwm")
region = Rect2(192, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aa38m"]
atlas = ExtResource("9_p7fwm")
region = Rect2(224, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qnsyb"]
atlas = ExtResource("9_p7fwm")
region = Rect2(128, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t3wip"]
atlas = ExtResource("9_p7fwm")
region = Rect2(160, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a310k"]
atlas = ExtResource("9_p7fwm")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nuiyi"]
atlas = ExtResource("9_p7fwm")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5kils"]
atlas = ExtResource("9_p7fwm")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ktqq8"]
atlas = ExtResource("9_p7fwm")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mev5d"]
atlas = ExtResource("9_p7fwm")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ne5tj"]
atlas = ExtResource("9_p7fwm")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o83e6"]
atlas = ExtResource("9_p7fwm")
region = Rect2(192, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_js3mg"]
atlas = ExtResource("9_p7fwm")
region = Rect2(224, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4t8rh"]
atlas = ExtResource("9_p7fwm")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f8d0f"]
atlas = ExtResource("9_p7fwm")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4p6ig"]
atlas = ExtResource("9_p7fwm")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ur8j"]
atlas = ExtResource("9_p7fwm")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6xfgk"]
atlas = ExtResource("9_p7fwm")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dnwg4"]
atlas = ExtResource("9_p7fwm")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wotn3"]
atlas = ExtResource("9_p7fwm")
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7cq0i"]
atlas = ExtResource("9_p7fwm")
region = Rect2(224, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_uqgb7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wxebj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s1ce6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cmrbd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hdetp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2scci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6nl5w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xypf6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o1cno")
}],
"loop": true,
"name": &"Attack",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jdch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_auvdt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lcg61")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ot5vk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0afaq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1raqs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_54nnb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aa38m")
}],
"loop": true,
"name": &"Dead",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qnsyb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t3wip")
}],
"loop": true,
"name": &"Fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a310k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nuiyi")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5kils")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ktqq8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mev5d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ne5tj")
}],
"loop": true,
"name": &"Jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o83e6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_js3mg")
}],
"loop": true,
"name": &"Land",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4t8rh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f8d0f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4p6ig")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ur8j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6xfgk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dnwg4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wotn3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7cq0i")
}],
"loop": true,
"name": &"Run",
"speed": 8.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_iktig"]
radius = 7.27273
height = 29.0909

[sub_resource type="Gradient" id="Gradient_pig5i"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_j2cfo"]
gradient = SubResource("Gradient_pig5i")

[node name="Player" type="CharacterBody2D"]
z_index = 1
scale = Vector2(0.55, 0.55)
script = ExtResource("1_arfj7")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
modulate = Color(0.494118, 0.831373, 0.678431, 1)
z_index = 3
position = Vector2(7.27273, -16.3636)
sprite_frames = SubResource("SpriteFrames_uqgb7")
animation = &"Land"
autoplay = "Idle"
frame_progress = 0.602507

[node name="HurtBox" type="CollisionShape2D" parent="."]
z_index = 4
position = Vector2(7.27273, -14.5455)
shape = SubResource("CapsuleShape2D_iktig")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_gni2w")

[node name="PointLight2D" type="PointLight2D" parent="."]
visible = false
position = Vector2(22, -26)
scale = Vector2(1.15625, 0.875)
shadow_enabled = true
texture = SubResource("GradientTexture2D_j2cfo")

[node name="BaseWeapon" parent="." instance=ExtResource("4_quwbl")]
position = Vector2(23.6364, -7.27273)

[connection signal="cameraShake" from="." to="." method="_on_camera_shake"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
